# pac

./: .gitignore  .ocamlformat  CLAUDE.md  README.md  dune-project  pac.opam
examples/: concurrent.pac
lib/: ast.ml  ast.mli  concurrent.ml  concurrent.mli  core.ml  core.mli  dune  import.ml  lexer.mll  pac.ml  parser.mly  pubgrub.ml  pubgrub.mli  util.ml
test/: analyze_missing.ml  debug_empty.ml  debug_example.ml  debug_minimal.ml  debug_pubgrub.ml  debug_pubgrub_simple.ml  dune  impossible_case.pac  missing_dependency.pac  pathological_cases.pac  simple_debug.ml  simple_empty_deps.pac  test_minimal.pac  test_pathological.ml  test_pubgrub.ml
tests/: backtrack.pac  branching-error.pac  check.t  circular.pac  concurrent.pac  conflict-avoidance.pac  conflict-partial-satisfier.pac  conflict.pac  dune  example.pac  impossible.pac  impossible2.pac  linear-error.pac  long_chain_conflict.pac  long_chain_missing.pac  parse.t  pubgrub.t  reduce.t  simple.pac  solve.t  test_minimal.pac
